--- a/project/pom.xml
+++ b/project/pom.xml
@@ -31,8 +31,18 @@
 	</properties>
 	<dependencies>
 		<dependency>
+    		<groupId>io.github.cdimascio</groupId>
+    		<artifactId>dotenv-java</artifactId>
+    		<version>3.2.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+  			<groupId>se.michaelthelin.spotify</groupId>
+  			<artifactId>spotify-web-api-java</artifactId>
+  			<version>9.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
